added basic authentication, added model calls for profile and comments, added action to add comments

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10495,6 +10495,15 @@ a.text-dark:focus {
   height: 700px;
 }
 
+.chat-display p {
+  font-size: 16px;
+  font-weight: 200;
+}
+
+.chat-display .name {
+  font-size: 14px;
+}
+
 .chat-form textarea {
   resize: none;
 }
